Replication Framework/services_creators/yamls-to-apply/shippingservice-apply/shippingservice-svc-5.yaml
apiVersion: v1
kind: Service
metadata:
  name: shippingservice-5
spec:
  ports:
  - name: grpc
    port: 60729
    targetPort: 60729
  selector:
    app: shippingservice-5
  type: ClusterIP
