Replication Framework/services_creators/yamls-to-apply/shippingservice-apply/shippingservice-netpol-1-checkoutservice-8.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-1-allow-checkoutservice-7
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-7
    ports:
    - port: 24147
  podSelector:
    matchLabels:
      app: shippingservice-1
