Replication Framework/services_creators/yamls-to-apply/shippingservice-apply/shippingservice-netpol-1-frontend-5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-1-allow-frontend-5
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-5
    ports:
    - port: 24147
  podSelector:
    matchLabels:
      app: shippingservice-1
