Replication Framework/services_creators/yamls-to-apply/shippingservice-apply/shippingservice-netpol-3-checkoutservice-9.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-3-allow-checkoutservice-8
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-8
    ports:
    - port: 11702
  podSelector:
    matchLabels:
      app: shippingservice-3
